<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSettings">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/preferences_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pref_override_language"
            android:id="@+id/textView6"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pref_override_language_summary"
            android:id="@+id/textView7" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group">
            <RadioButton android:id="@+id/radio_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_override_language_system" />
            <RadioButton android:id="@+id/radio_asturian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_override_language_asturian" />
        </RadioGroup>
    </LinearLayout>

</FrameLayout>
